Express added, first route, index, created

--- a/views/about.html
+++ b/views/about.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>About Us</h1>
-<p>Welcome to our World</p>
+<p>Welcome to our World, We are based in lagos we we earn in dollars</p>
 
 </body>
 </html>
