Express routing used for sending html file

--- a/views/about.html
+++ b/views/about.html
@@ -7,6 +7,8 @@
 
 <h1>About Us</h1>
 <p>Welcome to our World, We are based in lagos we we earn in dollars</p>
+<a href="/">Home</a>
+<a href="/about">About</a>
 
 </body>
 </html>
