middleware added, morgan tested

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,47 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HR | <%= title %></title>
-    <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.css" media="screen">
-    <link rel="stylesheet" href="https://bootswatch.com/_assets/css/custom.min.css">
-    <style>
-        body{
-          margin: 0 !important; padding: 0 !important;
-        }
-    </style>
-
-</head>
-<body>
+ <!--navbar-->
+ <%- include('./partials/head')%>
+ <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Honesty Record</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/create">Submit Request</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/honestlist">Recent Request</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/terms">Terms</a>
-          </li>
-            
-          </ul>
-        </div>
-      </nav>
+    <%- include('./partials/nav')%>
 
       <div class="jumbotron">
         <h1 class="display-3">A world of Honest Men</h1>
@@ -52,6 +15,6 @@
           <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </p>
       </div>
-    
+      <%- include('./partials/footer')%>
 </body>
 </html>
