models for list added, database connection set

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,10 +4,6 @@
     <title>HR | <%= title %></title>
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.css" media="screen">
     <link rel="stylesheet" href="https://bootswatch.com/_assets/css/custom.min.css">
-    <style>
-        body{
-          margin: 0 !important; padding: 0 !important;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/index.css">
 
 </head>
